added the submit user endpoint
