# src/server/controllers/users.controller.js
@@ -1,5 +1,6 @@
 import Service from "../services/default.service";
 import { API_RESPONSES } from "../utils/constants";
+const axios = require('axios');
 
 class UserController extends Service {
   constructor() {
@@ -26,20 +27,41 @@ class UserController extends Service {
   }
 
   /**
-   * 
-   * @param {*} req Request
-   * @param {*} res Response
-   * @description Find a user by ID
-   * @returns User object if found
-   */
-  async findOne(req, res) {
+ * 
+ * @param {*} req Request
+ * @param {*} res Response
+ * @description Submit user ID and desired start date, get user data, and send a POST request to a third-party URL
+ * @returns Response from third-party API
+ */
+  async submit(req, res) {
+    const url = "https://laas-dev.spvie.com/api/Projects";
+    const requestHeader = {
+      'Authorization-Broker-Code': '60169',
+      'Authorization-Broker-Token': '30d2a5a5-a33b-4ad0-8ce0-009b669a56d7'
+    };
+
     try {
-      const { id } = req.params;
-      const user = await this.userService.findOne(id);
+      const { user_id, desired_start_date } = req.body;
+      const userService = super.userService();
+      const user = await userService.findUserById(user_id);
+
       if (!user) {
-        return res.status(404).json({ message: API_RESPONSES.USER_NOT_FOUND });
+        return res.status(404).json({ error: API_RESPONSES.USER_NOT_FOUND });
       }
-      return res.status(200).json(user);
+
+      const response = await axios.post(url, {
+        EffectDate: desired_start_date,
+        Client: {
+          Email: user.email,
+          Phone: user.phone,
+          FirstName: user.first_name,
+          LastName: user.last_name,
+        },
+      }, {
+        headers: requestHeader
+      });
+
+      return res.status(200).json(response.data);
     } catch (err) {
       return res.status(400).json({ error: err.message });
     }
