# src/server/routes/users.routes.js
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 const validate = require('../middlewares/validationMiddleware');
-const { createUserSchema } = require('../dto/user.dto');
+const { createUserSchema, checkStartDateSchema } = require('../dto/user.dto');
 import Controller from '../controllers/default.controller';
 class UserRoutes extends Controller {
   constructor() {
@@ -10,7 +10,7 @@ class UserRoutes extends Controller {
   route() {
     return [
       this.router.post('/users', validate(createUserSchema), super.userController().create),
-
+      this.router.post('/submit', validate(checkStartDateSchema), super.userController().submit),
     ];
   }
 }
